# gameulator

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
.claude/: CLAUDE.md
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  render.rs
crates/cli/tests/: cli.rs
crates/pokegen1/: Cargo.toml
crates/pokegen1/src/: lib.rs
crates/pokegen1/src/core/: checksum.rs  data.rs  error.rs  header.rs  items.rs  mod.rs  party.rs  pokemon.rs  save.rs  sram.rs  test_support.rs  text.rs
crates/pokegen1/src/games/: mod.rs
crates/pokegen1/src/games/yellow_legacy/: mod.rs
crates/pokegen1/tests/: real_save.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs  main.rs  process.rs  regression.rs  snapshot.rs  status.rs  test_support.rs  validate.rs  watch.rs
crates/web/: Cargo.toml  index.html  style.css
crates/web-server/: Cargo.toml
crates/web-server/src/: lib.rs  main.rs
crates/web/src/: main.rs
crates/web/src/components/: hp_bar.rs  info_header.rs  item_list.rs  mod.rs  move_list.rs  party_card.rs  status_badges.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs  parsers.rs
docs/: ROADMAP.md  SYNCTHING.md
docs/plans/: 2026-07-17-gameulator-design.md  2026-07-17-gameulator-milestone1-plan.md  2026-07-17-milestone2-sync-design.md  2026-07-17-milestone2-sync-plan.md  2026-07-17-milestone3-web-design.md  2026-07-17-milestone3-web-plan.md
reference/: POKEMON_YELLOW_LEGACY_REFERENCE.md  YELLOW_LEGACY_PORTABLE_NOTES.md  legacy.json  parse_legacy.py  pokedump.sh  pokemon_yellow_movepool_model.xlsx  pokemon_yellow_type_coverage.xlsx  read_party.py  read_save.py  savemap.json  yellow_legacy_model.xlsx
