[workspace]
resolver = "2"
members = ["crates/pokegen1", "crates/app", "crates/cli", "crates/sync", "crates/web-server", "crates/xtask", "crates/web"]

# `crates/web` targets wasm32-unknown-unknown (Leptos CSR) and cannot be built
# natively. Excluding it from default-members means bare `cargo build`/`cargo test`
# skip it. Native verification: `cargo test --workspace --exclude web`.
# Frontend verification: wasm target + `trunk build` (run from crates/web).
default-members = ["crates/pokegen1", "crates/app", "crates/cli", "crates/sync", "crates/web-server", "crates/xtask"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
notify = "6"
notify-debouncer-full = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["fs"] }
