[workspace]
resolver = "2"
members = ["crates/pokegen1", "crates/app", "crates/cli", "crates/sync", "crates/web-server", "crates/xtask", "crates/web"]

# `crates/web` targets wasm32 (Leptos CSR). It happens to compile on the host
# today, but we keep it OUT of default-members so bare `cargo build`/`cargo test`
# stay fast and can't be broken by a future wasm-only dep. This is a speed/isolation
# convention, NOT a correctness requirement — `cargo test --workspace` still works.
# Native suite: `cargo test --workspace --exclude web` (skips recompiling web on the
# host). Frontend: `cargo check -p web --target wasm32-unknown-unknown` + `trunk build`
# (from crates/web). NOTE: add any new NATIVE crate to BOTH members and default-members.
default-members = ["crates/pokegen1", "crates/app", "crates/cli", "crates/sync", "crates/web-server", "crates/xtask"]

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
notify = "6"
notify-debouncer-full = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.5", features = ["fs"] }
