[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# The crate is named `cli`, but the shipped binary is `gameulator`
# (Task 1 review follow-up).
[[bin]]
name = "gameulator"
path = "src/main.rs"

[dependencies]
app = { path = "../app" }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# The integration test builds a save fixture from `pokegen1::core::sram` offset
# consts — a test concern, so pokegen1 stays a dev-only dep. Production CLI code
# goes through `app` and never names pokegen1.
pokegen1 = { path = "../pokegen1" }
assert_cmd = "2"
tempfile = "3"
predicates = "3"
