[package]
name = "web"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
app = { path = "../app" }
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
